# shengen_french

./: .gitignore  README.md  config.py  download_chromedriver.sh  pyproject.toml  test.ipynb
app/: config.py  scraper.py  utils.py
database/: db.py
database/alembic/: env.py
database/alembic/versions/: 530eb3715c5c_.py  6d467cdf7870_.py  a375cd6320c3_.py
