[tool.poetry]
name = "shengen_french"
version = "0.1.0"
description = "Бот для проверки возможности отправки заявки на шенген во францию"
authors = ["Daniyalbek Daniyalov"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.81.0"
SQLAlchemy = "^1.4.40"
psycopg2 = "^2.9.3"
celery = {extras = ["redis"], version = "^5.2.7"}
selenium = "^4.4.3"
alembic = "^1.8.1"
python-dotenv = "^0.20.0"
Pillow = "^9.2.0"
requests = "^2.28.1"
fake-useragent = "^0.1.11"
undetected-chromedriver = "^3.1.5"
pytesseract = "^0.3.10"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
